# SENG330-2

./: .README.md.swp  CMakeLists.txt  CMakeLists.txt~  INSTALL.txt  README.md  bracelet.cpp  bracelet.cpp~  bracelet.h~  elliptical.cpp  elliptical.cpp~  elliptical.h  elliptical.h~  fitplanet  fitplanet.cpp  fitplanet.cpp~  fitplanet.pb.cc  fitplanet.pb.h  fitplanet.proto  fitplanet.proto~  lift.cpp  lift.cpp~  lift.h  lift.h~  machine  machine.cpp  machine.cpp~  machine.h  machine.h~  makefile  makefile~  make~  member  member.cpp  member.cpp~  member.h  member.h~  output
html/: annotated.html  bracelet_8h_source.html  classbracelet-members.html  classbracelet.html  classelliptical-members.html  classelliptical.html  classes.html  classlift-members.html  classlift.html  classmachine-members.html  classmachine.html  classmachines_1_1Machine-members.html  classmachines_1_1Machine.html  classmachines_1_1Machines-members.html  classmachines_1_1Machines.html  classmember-members.html  classmember.html  elliptical_8h_source.html  files.html  fitplanet_8pb_8h_source.html  hierarchy.html  index.html  lift_8h_source.html  machine_8h_source.html  md_README.html  member_8h_source.html  pages.html  structmachines_1_1StaticDescriptorInitializer__fitplanet__2eproto-members.html  structmachines_1_1StaticDescriptorInitializer__fitplanet__2eproto.html
latex/: annotated.tex  classbracelet.eps  classbracelet.tex  classelliptical.eps  classelliptical.tex  classlift.eps  classlift.tex  classmachine.eps  classmachine.tex  classmachines_1_1Machine.eps  classmachines_1_1Machine.tex  refman.tex  (+7 more)
(+7 files in other folders)
